sophons/system/crowdsec/middleware.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: crowdsec-bouncer
  namespace: crowdsec
spec:
  plugin:
    crowdsec-bouncer-traefik-plugin:
      enabled: true
      updateMaxFailure: -1
      httpTimeoutSeconds: 30
      logLevel: DEBUG
      crowdsecMode: stream
      crowdsecLapiScheme: http
      crowdsecLapiHost: crowdsec-service.crowdsec.svc.cluster.local:8080
      # crowdsecLapiTlsInsecureVerify: true
      # enc!
      crowdsecLapiKey: ENC[AES256_GCM,data:91BE1k0ej/eQTOzKP3nyPjG6IZ77MaXhb7owd6Fp5IyOoTcJmjjMB1BySFP5sMoyp6o10RK5aj56wV3hKvoQfENVJY0T8k25ZYRqS/EM6nQEvwJ6BPoNK67FMWE9t/wlDQJepZYxWCRwn1ORy9XoW00G41QboKtT/8MZ/Hl0Ki4=,iv:qMf65/rkwYg76QWS0WmASGXY9cpw80XH2tRXymurtQw=,tag:l9ioXGP9OmIFMTF7SrlLng==,type:str]
      forwardedHeadersTrustedIPs:
        # lokalhost
        - 127.0.0.0/8
        - ::1/128
        # kluster
        - 10.41.0.0/16
        - 2001:cafe:41::/56
        # Cloudflare
        - 173.245.48.0/20
        - 103.21.244.0/22
        - 103.22.200.0/22
        - 103.31.4.0/22
        - 141.101.64.0/18
        - 108.162.192.0/18
        - 190.93.240.0/20
        - 188.114.96.0/20
        - 197.234.240.0/22
        - 198.41.128.0/17
        - 162.158.0.0/15
        - 104.16.0.0/13
        - 104.24.0.0/14
        - 172.64.0.0/13
        - 131.0.72.0/22
        - 2400:cb00::/32
        - 2606:4700::/32
        - 2803:f800::/32
        - 2405:b500::/32
        - 2405:8100::/32
        - 2a06:98c0::/29
        - 2c0f:f248::/32
sops:
  age:
    - recipient: ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAII7yyj/sVuDdc6kGEeipVtC0EBaeACTFWHZ9MH77XsFq vrtx@kaos
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IHNzaC1lZDI1NTE5IDNEQlRBdyA5ejNy
[...]
        JXtOhA==
        -----END AGE ENCRYPTED FILE-----
    - recipient: age1kum4z0unkunza7kxt4ma7v8k38ggvtjhx6wntnjt8clt6xpyu3eqsw435t
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiT1ZieW1EVktxbTlHSDlu
[...]
        QBE2hivEd6dJBIXz3vlnmCpjoJB+nG1QqjIDcvN3IQ6EUWSnviJgsw==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-04-23T20:02:48Z"
  mac: ENC[AES256_GCM,data:lU3stonjQ/G2IW+2LGc/KtFb57gzx1ZclVXYr5r4KPCdvNZz3e0RQCmd0F0hmoPWf060cnQWJ/OjtQihqStQRoHwnp0GBr7hc1UeEY+IBca2zO3rH3eqonIHSb0zIQPFNugiuCEnMc6LAxyq9gO9C0TdFnboNZlo09JMGlz6F/A=,iv:RoxMQQqXBHEu3xhuqhvEh4qTOnzt0iGRvPKmbx1X0rA=,tag:2dYgeeMFZjGPdnUYSFxtUg==,type:str]
  encrypted_comment_regex: enc!
  version: 3.11.0
