sophons/system/crowdsec/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: crowdsec-bouncer
  namespace: crowdsec
spec:
  plugin:
    crowdsec-bouncer:
      enabled: true
      logLevel: INFO
      logFormat: json
      updateMaxFailure: -1
      httpTimeoutSeconds: 120 # This timeout is shared amongst a great many things
      streamStartupBlock: false
      metricsUpdateIntervalSeconds: 60
      crowdsecMode: stream
      crowdsecLapiScheme: http
      crowdsecLapiHost: crowdsec-service.crowdsec:8080
      crowdsecLapiKeyFile: /etc/traefik/crowdsec/traefikBouncerKey
      # The filter at the entrypoint strips this if it's not from a trusted proxy
      # https://github.com/traefik/traefik/blob/master/pkg/middlewares/forwardedheaders/forwarded_header.go
      forwardedHeadersCustomName: X-Real-Ip
      clientTrustedIPs:
        - 10.41.0.0/16
        - 2001:cafe:41::/56
        - 10.67.0.0/16
        - fdf6:9420:fade::/48
        - 100.64.0.0/10
        - fd7a:115c:a1e0::/48
      # more trouble than it's worth? atm
      # TODO: https://github.com/maxlerebourg/crowdsec-bouncer-traefik-plugin/issues/384 + stuff
      crowdsecAppsecEnabled: true
      crowdsecAppsecHost: crowdsec-appsec-service.crowdsec:7422
      crowdsecAppsecBodyLimit: 1048576 # 1MiB
      crowdsecAppsecUnreadableBodyBlock: false # gRPC bidir streams
